--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
     ],
     "driver_path": "./resource/chromedriver",
     "damai_url": "https://www.damai.cn/",
-    "target_url": "https://m.damai.cn/damai/detail/item.html?itemId=802820198791&utm=",
+    "target_url": "https://m.damai.cn/damai/detail/item.html?itemId=802820198791",
     "comment": {
         "title": "comment 下的所有内容为自定义注释,无实际含义",
         "date": "1",
@@ -29,7 +29,7 @@
         "nick_name": "用户昵称,已经弃用",
         "ticket_num": "购买票数,购买票数与观影人序号的数量务必一致",
         "viewer_person": "观影人序号(预先添加实名观影人),优先选中的序号放在前,填写的序号若大于实际序号,则会放弃选中",
-        "driver_path": "驱动地址",
+        "driver_path": "驱动地址。./resource/chromedriver是作者mac电脑使用的驱动，对应chrome版本是：版本 125.0.6422.142（正式版本） (arm64)",
         "damai_url": "大麦首页地址,用于登录",
         "target_url": "购票的实际地址,需要使用手机端的地址,域名: https://m.damai.cn/ 开头"
     }
